# ducky-rag

./: .env  .env.backup.20251017_174643  .gitignore  SETUP.md  ducky-setup.py  pyproject.toml  test_rag.py
construction/: chunking-pruning-tutorial.ipynb  chunking_example.txt  embeddings-tutorial.ipynb  rag_implementation_plan.md
pages/: 1_💬_Quick_Chat.py  2_🎓_Learning_Topics.py  3_📓_Requirements.py  4_🤖_AI_Code_Assistant.py
services/: README.md  extract.py  llm.py  prompts.py  rag.py  requirements.py
ui/components/: sidebar.py
ui/interactions/: book_handler.py  chat_handler.py
ui/layouts/: two_column.py
